Bug#23170: LAST_INSERT_ID isn't reset to 0 in INSERT .. SELECT when no rows were inserted.

The select_insert::send_eof() function now resets LAST_INSERT_ID variable if
no rows were inserted.